--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-matplotlib==3.1.1
-matplotlib-inline==0.1.3
 numpy==1.16.2
 numpydoc==0.8.0
 pandas==0.24.2
-plotly==5.5.0
+scikit-image==0.14.2
+scikit-learn==0.20.3
+scipy==1.2.1
 streamlit==1.3.1
-wordcloud==1.6.0
